--- a/assets/_styles/views/selfserve/overview.scss
+++ b/assets/_styles/views/selfserve/overview.scss
@@ -16,7 +16,7 @@
 
 .overview-item {
   border-bottom: 1px solid $grey-2;
-  display: inline-block;
+  float: left;
   width: 100%;
   h4 {
     float: left;
